[gd_scene load_steps=87 format=3 uid="uid://c482006yyqmt6"]

[ext_resource type="Script" uid="uid://bip5yuyl1yjwy" path="res://scripts/characters/agent.gd" id="1_hisv7"]
[ext_resource type="Texture2D" uid="uid://bxsvceuav3hq0" path="res://assets/sprites/bodies/green.png" id="2_1ryb6"]
[ext_resource type="Texture2D" uid="uid://br0qa88r4phdj" path="res://assets/sprites/heads/universal.png" id="3_1ryb6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wc5wm"]
atlas = ExtResource("2_1ryb6")
region = Rect2(0, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r75cw"]
atlas = ExtResource("2_1ryb6")
region = Rect2(0, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xa7i"]
atlas = ExtResource("2_1ryb6")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6og7"]
atlas = ExtResource("2_1ryb6")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnuea"]
atlas = ExtResource("2_1ryb6")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhev7"]
atlas = ExtResource("2_1ryb6")
region = Rect2(256, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk6od"]
atlas = ExtResource("2_1ryb6")
region = Rect2(320, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08ms4"]
atlas = ExtResource("2_1ryb6")
region = Rect2(384, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r73sa"]
atlas = ExtResource("2_1ryb6")
region = Rect2(448, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q64vw"]
atlas = ExtResource("2_1ryb6")
region = Rect2(512, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnopg"]
atlas = ExtResource("2_1ryb6")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_775tn"]
atlas = ExtResource("2_1ryb6")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ciiwc"]
atlas = ExtResource("2_1ryb6")
region = Rect2(64, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3h1w"]
atlas = ExtResource("2_1ryb6")
region = Rect2(128, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_agetr"]
atlas = ExtResource("2_1ryb6")
region = Rect2(192, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvl6p"]
atlas = ExtResource("2_1ryb6")
region = Rect2(256, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x43yy"]
atlas = ExtResource("2_1ryb6")
region = Rect2(320, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm51t"]
atlas = ExtResource("2_1ryb6")
region = Rect2(384, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d65x8"]
atlas = ExtResource("2_1ryb6")
region = Rect2(448, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntn7w"]
atlas = ExtResource("2_1ryb6")
region = Rect2(512, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4xy8"]
atlas = ExtResource("2_1ryb6")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yk2h"]
atlas = ExtResource("2_1ryb6")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t3cc"]
atlas = ExtResource("2_1ryb6")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w65te"]
atlas = ExtResource("2_1ryb6")
region = Rect2(128, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a68gr"]
atlas = ExtResource("2_1ryb6")
region = Rect2(192, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y22tu"]
atlas = ExtResource("2_1ryb6")
region = Rect2(256, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn30d"]
atlas = ExtResource("2_1ryb6")
region = Rect2(320, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2j6s"]
atlas = ExtResource("2_1ryb6")
region = Rect2(384, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw3ak"]
atlas = ExtResource("2_1ryb6")
region = Rect2(448, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mihvq"]
atlas = ExtResource("2_1ryb6")
region = Rect2(512, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7nyh"]
atlas = ExtResource("2_1ryb6")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i45v6"]
atlas = ExtResource("2_1ryb6")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_emo3c"]
atlas = ExtResource("2_1ryb6")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvpxa"]
atlas = ExtResource("2_1ryb6")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v2iv"]
atlas = ExtResource("2_1ryb6")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_shu0k"]
atlas = ExtResource("2_1ryb6")
region = Rect2(256, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i65j2"]
atlas = ExtResource("2_1ryb6")
region = Rect2(320, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1mmq"]
atlas = ExtResource("2_1ryb6")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6r0s"]
atlas = ExtResource("2_1ryb6")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xbu3"]
atlas = ExtResource("2_1ryb6")
region = Rect2(512, 512, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_hisv7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wc5wm")
}],
"loop": true,
"name": &"down_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r75cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xa7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6og7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnuea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhev7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk6od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08ms4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r73sa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q64vw")
}],
"loop": true,
"name": &"down_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnopg")
}],
"loop": true,
"name": &"left_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_775tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ciiwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3h1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agetr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvl6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x43yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm51t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d65x8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntn7w")
}],
"loop": true,
"name": &"left_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4xy8")
}],
"loop": true,
"name": &"right_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yk2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t3cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w65te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a68gr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y22tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn30d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2j6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw3ak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mihvq")
}],
"loop": true,
"name": &"right_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7nyh")
}],
"loop": true,
"name": &"up_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i45v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emo3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvpxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v2iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shu0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i65j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1mmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6r0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xbu3")
}],
"loop": true,
"name": &"up_walk",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ldkcd"]
atlas = ExtResource("3_1ryb6")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwqim"]
atlas = ExtResource("3_1ryb6")
region = Rect2(0, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8q55"]
atlas = ExtResource("3_1ryb6")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8vry"]
atlas = ExtResource("3_1ryb6")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_akpis"]
atlas = ExtResource("3_1ryb6")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbhtf"]
atlas = ExtResource("3_1ryb6")
region = Rect2(256, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kiu3h"]
atlas = ExtResource("3_1ryb6")
region = Rect2(320, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqru0"]
atlas = ExtResource("3_1ryb6")
region = Rect2(384, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjm8n"]
atlas = ExtResource("3_1ryb6")
region = Rect2(448, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5iub"]
atlas = ExtResource("3_1ryb6")
region = Rect2(512, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6byq"]
atlas = ExtResource("3_1ryb6")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx7mc"]
atlas = ExtResource("3_1ryb6")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck0n3"]
atlas = ExtResource("3_1ryb6")
region = Rect2(64, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_trr15"]
atlas = ExtResource("3_1ryb6")
region = Rect2(128, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c00et"]
atlas = ExtResource("3_1ryb6")
region = Rect2(192, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsc1g"]
atlas = ExtResource("3_1ryb6")
region = Rect2(256, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ibsk"]
atlas = ExtResource("3_1ryb6")
region = Rect2(320, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpeit"]
atlas = ExtResource("3_1ryb6")
region = Rect2(384, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv7n5"]
atlas = ExtResource("3_1ryb6")
region = Rect2(448, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_722ru"]
atlas = ExtResource("3_1ryb6")
region = Rect2(512, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_50b2j"]
atlas = ExtResource("3_1ryb6")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bmut"]
atlas = ExtResource("3_1ryb6")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e14c2"]
atlas = ExtResource("3_1ryb6")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a7qc"]
atlas = ExtResource("3_1ryb6")
region = Rect2(128, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkp44"]
atlas = ExtResource("3_1ryb6")
region = Rect2(192, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_agwbr"]
atlas = ExtResource("3_1ryb6")
region = Rect2(256, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5e0r"]
atlas = ExtResource("3_1ryb6")
region = Rect2(320, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbae5"]
atlas = ExtResource("3_1ryb6")
region = Rect2(384, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss5sv"]
atlas = ExtResource("3_1ryb6")
region = Rect2(448, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow7jj"]
atlas = ExtResource("3_1ryb6")
region = Rect2(512, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_po4h2"]
atlas = ExtResource("3_1ryb6")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6x46"]
atlas = ExtResource("3_1ryb6")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vixew"]
atlas = ExtResource("3_1ryb6")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhymu"]
atlas = ExtResource("3_1ryb6")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy0li"]
atlas = ExtResource("3_1ryb6")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5nng"]
atlas = ExtResource("3_1ryb6")
region = Rect2(256, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wlu3"]
atlas = ExtResource("3_1ryb6")
region = Rect2(320, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_832nd"]
atlas = ExtResource("3_1ryb6")
region = Rect2(384, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0gxj"]
atlas = ExtResource("3_1ryb6")
region = Rect2(448, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2uut"]
atlas = ExtResource("3_1ryb6")
region = Rect2(512, 512, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2bmut"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldkcd")
}],
"loop": true,
"name": &"down_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwqim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8q55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8vry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akpis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbhtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kiu3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqru0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjm8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5iub")
}],
"loop": true,
"name": &"down_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6byq")
}],
"loop": true,
"name": &"left_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx7mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck0n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trr15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c00et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsc1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ibsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpeit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv7n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_722ru")
}],
"loop": true,
"name": &"left_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50b2j")
}],
"loop": true,
"name": &"right_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bmut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e14c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a7qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkp44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agwbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5e0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbae5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss5sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow7jj")
}],
"loop": true,
"name": &"right_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_po4h2")
}],
"loop": true,
"name": &"up_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6x46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vixew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhymu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy0li")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5nng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wlu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_832nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0gxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2uut")
}],
"loop": true,
"name": &"up_walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ryb6"]

[node name="Agent" type="CharacterBody2D"]
script = ExtResource("1_hisv7")

[node name="BodyAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -30)
sprite_frames = SubResource("SpriteFrames_hisv7")
animation = &"down_walk"

[node name="HeadAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -30)
sprite_frames = SubResource("SpriteFrames_2bmut")
animation = &"down_idle"
autoplay = "right_walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_1ryb6")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 0.1
target_desired_distance = 0.1
path_max_distance = 20.0
path_postprocessing = 1
radius = 5.0
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
